<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_settings_main_fl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/gray_3d"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/black">

            <FrameLayout
                android:id="@+id/fragment_guide_fl_back"
                android:layout_width="@dimen/action_bar_btn_width"
                android:layout_height="match_parent"
                android:layout_gravity="left">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:src="@mipmap/action_bar_arrow_back" />

            </FrameLayout>

            <TextView
                android:id="@+id/fragment_guide_tv_action_bar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/activity_main_title_guide"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_action_bar"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/fragment_guide_four_cate"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragment_guide_tv_go_shopping"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/solid_round_rectangle_green25"
                android:gravity="center"
                android:text="@string/fragment_guide_go_shopping"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@color/gray_96" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/fragment_guide_shopping_self"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_62"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:padding="16dp"
                android:text="@string/fragment_guide_cate"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/fragment_guide_et_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray_62"
                android:hint="@string/fragment_guide_edit_hint"
                android:padding="16dp"
                android:textColor="@android:color/white"
                android:textColorHint="@color/gray_a4" />

        </LinearLayout>

        <TextView
            android:id="@+id/fragment_guide_tv_go_shopping_specific"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:background="@drawable/solid_round_rectangle_green25"
            android:gravity="center"
            android:text="@string/activity_main_title_store"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>